--- a/03-back-end/package.json
+++ b/03-back-end/package.json
@@ -4,11 +4,24 @@
   "description": "Aplikacija sistemi ePoslovanja",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc",
+    "start": "npm run build && node ./dist/main.js",
+    "start:dev": "ts-node-dev --respawn -- src/main.ts"
   },
   "author": "Una Petrovic <unapet998@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "rimraf": "^3.0.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.7.1",
+    "eslint": "^7.32.0",
+    "ts-node-dev": "^1.1.8",
+    "tsc": "^2.0.3",
+    "typescript": "^4.3.5"
   }
 }
