--- a/03-back-end/package.json
+++ b/03-back-end/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "clean": "rimraf dist",
     "build": "npm run clean && tsc",
-    "start": "npm run build && node ./dist/main.js",
-    "start:dev": "ts-node-dev --respawn -- src/main.ts"
+    "start": "npm run build && node --trace-warning ./dist/main.js",
+    "start:dev": "ts-node-dev --trace-warning --respawn -- src/main.ts"
   },
   "author": "Una Petrovic <unapet998@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mysql2": "^2.3.0",
     "rimraf": "^3.0.2"
   },
   "devDependencies": {
