--- a/03-back-end/package.json
+++ b/03-back-end/package.json
@@ -16,11 +16,17 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "image-size": "^1.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "sharp": "^0.29.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.1.7",
     "@types/node": "^16.7.1",
     "eslint": "^7.32.0",
     "ts-node-dev": "^1.1.8",
