--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ temp/
 03-back-end/static/uploads/
 03-back-end/.env
 03-back-end/package-lock.json
+03-back-end/keystore
 
 04-front-end/node_modules/
 04-front-end/.pnp
