--- a/03-back-end/package.json
+++ b/03-back-end/package.json
@@ -21,13 +21,16 @@
     "image-size": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.0",
+    "nodemailer": "^6.6.3",
     "rimraf": "^3.0.2",
     "sharp": "^0.29.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.1.7",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "^16.7.1",
     "eslint": "^7.32.0",
     "ts-node-dev": "^1.1.8",
