--- a/04-front-end/package.json
+++ b/04-front-end/package.json
@@ -3,26 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.9.1",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
-    "axios": "^0.21.4",
-    "bootstrap": "^5.1.1",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^12.20.13",
+    "@types/react": "^17.0.6",
+    "@types/react-dom": "^17.0.5",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
     "eventemitter3": "^4.0.7",
-    "node-sass": "^6.0.1",
+    "node-sass": "^6.0.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.3",
+    "react-bootstrap": "^1.6.0",
     "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3",
-    "typescript": "^4.4.3",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.2.4",
     "typescript-memoize": "^1.0.1",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
